Update PLAN_STABILISE_AND_DEPLOY.md with PR status and completed work
All 3 PRs open, 49 tests passing, Copilot review complete, citizenship
guidelines written, all blockers fixed.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>